--- a/backend/majors/NEU.yaml
+++ b/backend/majors/NEU.yaml
@@ -113,12 +113,15 @@ req_list:
               - NEU 301
               - NEU 331
               - NEU 385
+              - NEU 390
               - NEU 400
               - NEU 403
               - NEU 413
               - NEU 428
               - NEU 430
               - NEU 443
+              - NEU 444
+              - NEU 446
               - NEU 447
               - NEU 460
               - NEU 475
@@ -127,7 +130,7 @@ req_list:
               - ECE 452
               - MOL 250
               - MOL 433
-              - MOL 259
+              - MOL 459
               - MOL 460
               - PHY 562
               - QCB 515
@@ -142,14 +145,17 @@ req_list:
               - NEU 325
               - NEU 336
               - NEU 385
+              - NEU 390
               - NEU 413
               - NEU 420
               - NEU 422
               - NEU 427
               - NEU 428
+              - NEU 444
               - NEU 460
               - NEU 457
               - NEU 475
+              - NEU 477
               - NEU 501A
               - NEU 502A
               - PHY 562
@@ -177,6 +183,7 @@ req_list:
               - MAT 323
               - PSY 360
               - QCB 515
+              - SML 354
           - name: Social and Cognitive Neuroscience
             min_needed: 1
             max_counted: 1
@@ -190,6 +197,8 @@ req_list:
               - NEU 338
               - NEU 340
               - NEU 422
+              - NEU 446
+              - NEU 477
               - NEU 499
               - NEU 502A
               - ECE 480
