DEV-120: Updated distribution requirements for ENG major (#48)
* Updated distribution requirements for ENG major

* Removed duplicate entries

--- a/backend/majors/ENG.yaml
+++ b/backend/majors/ENG.yaml
@@ -44,35 +44,58 @@ req_list:
 
           Literary and Cultural History (LCH) courses ask questions about tradition and transmission over longer periods, and provide background for more specialized study.
         course_list:
-          - ENG 200
-          - AAS 359 / ENG 366
-          - COM 235 / ECS 340 / ENG 237
-          - LAS 307 / ENG 257 / COM 381
-          - THR 376 / COM 385 / ENG 276 / HLS 385
-          - ENG 415 / JRN 415 / COM 446 / AFS 415
-          - AAS 353 / ENG 352
-          - ASA 201 / ENG 209
+          - ENG 404 
+          - COM 471 
+          - COM 235 
+          - THR 376 
+          - ENG 201
+          - AAS 359
+          - LAS 307
+          - AAS 353
+          - AFS 343 
+          - COM 360 
           - HUM 216
           - HUM 217
+          - ENG 200
+          - ENG 204 
+          - AAS 253 
+          - ENG 399
+          - ASA 224
+          - ENG 375
+          - ENG 266
+          - COM 235
+          - ASA 201
+          - HUM 325 
+          - ENG 415
       - name: Literature and Culture before 1700
         max_counted: 1
         min_needed: 1
         explanation: |-
           <i>Editor's Note: This does not represent a comprehensive list of courses that fulfill this requirement as courses change from semester to semester. Some courses may fulfill different requirements depending on their content each semester.</i>
         course_list:
-          - ENG 200
-          - ENG 298 / COM 240
-          - ENG 317 / GSS 407
-          - ENG 319
-          - ENG 313 / MED 313
-          - ENG 318 / THR 310
-          - ENG 359 / COM 359
-          - ENG 390 / COM 392 / HUM 390
-          - ENG 325 / COM 371
-          - ENG 400 / MED 400
-          - ENG 402 / MED 401
-          - ENG 409 / THR 410 / HUM 409
-          - ENG 448 / THR 448 / HUM 448 / COM 440
+        - ENG 313
+        - ENG 359
+        - ENG 325
+        - THR 452 
+        - ENG 317
+        - ENG 342
+        - ENG 383
+        - ENG 390
+        - ENG 448
+        - ENG 319
+        - ENG 402
+        - ENG 298 
+        - ENG 318 
+        - ENG 328
+        - ENG 311
+        - ENG 279
+        - ENG 318
+        - ENG 200
+        - ENG 312
+        - ENG 322
+        - ENG 400
+        - ENG 315 
+        - ENG 317 
       - name: Literature and Culture from 1700-1900
         max_counted: 1
         min_needed: 1
@@ -82,16 +105,23 @@ req_list:
           Some courses may fulfill different requirements depending on their content each
           semester.</i>
         course_list:
-          - ENG 203
-          - ENG 304
-          - ENG 331 / ECS 382
-          - ENG 351
-          - ENG 334
-          - ENG 339 / COM 342 / GSS 438
+          - ENG 331 
+          - ENG 452
           - ENG 345
-          - ENG 384 / GSS 394
-          - ENG 409 / THR 410 / HUM 409
-          - ENG 341 / ECS 382
+          - GER 307 
+          - ENG 351
+          - ENG 404 
+          - ENG 341
+          - ENG 403
+          - ENG 304
+          - ENG 339
+          - ENG 334
+          - ENG 411
+          - ENG 409
+          - ENG 404
+          - ENG 201
+          - ENG 203
+          - ENG 384
       - name: Literature and Culture from 1900-Present
         max_counted: 1
         min_needed: 1
@@ -101,40 +131,70 @@ req_list:
           Some courses may fulfill different requirements depending on their content each
           semester.</i>
         course_list:
-          - ENG 304
-          - ENG 351
-          - ENG 379 / ENV 383
-          - ENG 444 / ASA 444 / AMS 443
-          - AAS 359 / ENG 366
-          - AMS 425 / ENG 423
-          - ASA 224 / ENG 224 / GSS 226
-          - ENV 363 / ENG 263
-          - HUM 352 / ENG 252 / URB 352 / THR 360
-          - THR 376 / COM 385 / ENG 276 / HLS 385
-          - ENG 354 / AAS 354 / THR 351
+          - ENG 401
+          - ENG 394
+          - AMS 425 
+          - ENG 368
+          - THR 347
+          - GSS 230 
+          - HUM 352 
+          - ENG 361
+          - ENG 340 
+          - AMS 334
+          - AAS 223 
+          - GSS 203 
+          - THR 376 
           - ENG 357
-          - ENG 360
-          - ENG 361 / THR 364 / COM 321
-          - ENG 368 / AMS 340
-          - ENG 383 / AAS 340 / GSS 395 / AMS 483
-          - ENG 405
-          - ENG 415 / JRN 415 / COM 446 / AFS 415
-          - ECS 342 / ENG 349
-          - LAO 340 / ENG 354
-          - THR 347 / ENG 274
-          - ENG 259 / AMS 259
-          - ENG 269
           - ENG 275
-          - ENG 3555
-          - ENG 358 / LAS 385 / AMS 396 / AAS 343
-          - ENG 401 / AMS 401
-          - AAS 230 / ENG 231
-          - AAS 359 / ENG 366
-          - AAS 392 / ENG 392
-          - AMS 317 / ENG 249
-          - AMS 334 / ENG 234
-          - HUM 307 / ENG 277
-          - THR 316 / ENG 217
+          - AAS 230
+          - AAS 359
+          - ENG 360
+          - ENG 305
+          - ENV 363 
+          - ENG 327
+          - ENG 405
+          - ENG 444 
+          - ENG 383
+          - ENG 398
+          - ENG 275 
+          - AAS 231 
+          - ENV 271 
+          - ENG 354
+          - ENG 259
+          - HUM 307
+          - ENG 402
+          - LAO 340
+          - ENG 355
+          - AMS 317
+          - HIS 387 
+          - AAS 312 
+          - ENG 370
+          - ENG 295
+          - ENG 441 
+          - ENG 351
+          - HUM 352
+          - ECS 342
+          - AMS 317 
+          - ENV 251 
+          - ENG 379 
+          - THR 316
+          - ENG 279
+          - ENG 204 
+          - ENG 379
+          - ENG 309
+          - ENG 409
+          - ASA 224
+          - AAS 392 
+          - ENV 363
+          - ENG 358
+          - LAO 330 
+          - ENG 415
+          - AAS 392
+          - ENG 304
+          - ENG 406
+          - ECS 342 
+          - ENG 218 
+          - ENG 269
       - name: Difference and Diversity
         max_counted: 1
         min_needed: 1
@@ -144,45 +204,65 @@ req_list:
           Some courses may fulfill different requirements depending on their content each
           semester.</i>
         course_list:
-          - ENG 379 / ENV 383
-          - ENG 444 / ASA 444 / AMS 443
-          - AAS 359 / ENG 366
-          - ASA 224 / ENG 224 / GSS 226
-          - GSS 223 / ENG 254
-          - GSS 303 / AMS 313 / ENG 283
-          - HUM 352 / ENG 252 / URB 352 / THR 360
-          - LAO 347 / ENG 247
-          - LAS 307 / ENG 257 / COM 381
-          - THR 300 / COM 359 / ENG 373 / ANT 359
-          - ENG 354 / AAS 354/ THR 351
-          - ENG 359 / COM 359
-          - ENG 383 / AAS 340 / GSS 395 / AMS 483
-          - ENG 384 / GSS 394
+          - COM 322
+          - ENG 394
+          - GSS 223 
+          - ENG 359
+          - THR 347
+          - GSS 230 
+          - HUM 352 
+          - AMS 404
+          - AAS 223 
+          - GSS 203 
+          - AMS 322 
+          - ENG 404
+          - AAS 230
+          - LAO 347
+          - AAS 359
+          - AAS 326
+          - COM 466 
+          - LAS 307
+          - AAS 353
           - ENG 405
-          - ENG 415 / JRN 415 / COM 446 / AFS 415
-          - AAS 353 / ENG 352
-          - AMS 322 / ENG 242
-          - ASA 201 / ENG 209
-          - LAO 340 / ENG 354
-          - THR 347 / ENG 274
-          - ENG 246 / HUM 246 / CLA 246 / CWR 246
-          - ENG 358 / LAS 385 / AMS 396 / AAS 343
+          - AMS 415
+          - ENG 444 
+          - ENG 383
+          - GSS 303
+          - ASA 389
+          - AAS 231 
+          - GSS 246 
+          - ENG 354
+          - AFS 343 
+          - LAO 340
+          - ENG 246
+          - AAS 312 
+          - ENG 370
+          - ENG 441 
+          - GSS 400
+          - ATL 499
+          - GSS 240 
+          - ENG 379 
+          - LAO 347 
+          - ENG 411
+          - AAS 253 
+          - ENG 379
+          - THR 300
           - ENG 387
-          - ENG 404 / NES 404 / AMS 402
-          - ENG 409 / THR 410 / HUM 409
-          - ENG 411 / AMS 411 / AAS 413
-          - AAS 230 / ENG 231
-          - AAS 326 / ENG 286
-          - AAS 359 / ENG 366
-          - AAS 392 / ENG 392
-          - AMS 404 / ENG 454
-          - AMS 415 / ENG 435
-          - ASA 389 / ENG 289
-          - ATL 499 / ENG 499
-          - COM 322 / ENG 282
-          - COM 464 / ENG 464
-          - GSS 400 / ENG 264
-          - LAO 347 / ENG 247
+          - GSS 223
+          - ENG 409
+          - ASA 224
+          - COM 464
+          - AAS 392 
+          - AMS 322
+          - ASA 201
+          - ENG 358
+          - LAO 330 
+          - ENG 415
+          - AAS 392
+          - ENG 406
+          - ENG 291 
+          - HUM 352
+          - ENG 384
       - name: Theory and Criticism
         max_counted: 1
         min_needed: 1
@@ -191,21 +271,51 @@ req_list:
 
           Theory and Criticism (T&C) provides tools for thinking critically across all these periods, identities, and genres.
         course_list:
-          - ENG 203
-          - ENG 317 / GSS 407
-          - ENG 444 / ASA 444 / AMS 443
-          - AMS 425 / ENG 423
-          - CLA 208 / ENG 240 / LIN 208 / TRA 208
-          - ENV 363 / ENG 263
-          - HUM 328 / ENG 270 / ART 396
-          - HUM 346 / ENG 256 / CDH 346
-          - THR 300 / COM 359 / ENG 373 / ANT 359
-          - ENG 306
-          - ENG 359 / COM 359
-          - ENG 387
-          - ENG 388
-          - ENG 411 / AMS 411 / AAS 413
-          - HUM 307 / ENG 277
+        - THR 308
+        - AMS 425
+        - ENG 359
+        - COM 207
+        - COM 471
+        - ENG 404
+        - COM 207
+        - COM 466
+        - ENG 305
+        - ENV 363 
+        - THR 452 
+        - GER 307 
+        - ENG 306
+        - ENG 327
+        - ENG 444 
+        - ENG 306 
+        - GSS 246 
+        - ENV 271 
+        - ENG 388
+        - HUM 346
+        - HUM 307
+        - ENG 355
+        - HIS 387 
+        - AAS 312 
+        - ENG 295
+        - COM 360 
+        - HUM 328
+        - GSS 240 
+        - ENV 251 
+        - ENG 411
+        - ENG 399
+        - THR 300
+        - ENG 387
+        - ENG 375
+        - ENG 266
+        - CLA 208
+        - ENV 363
+        - HUM 325 
+        - ENG 322
+        - COM 396 
+        - HUM 346 
+        - ENG 291 
+        - ENG 203
+        - ENG 218 
+        - ENG 317 
   - name: Tracks
     max_counted: 1
     min_needed: 1
@@ -260,7 +370,7 @@ req_list:
     explanation: |-
       The JRS is a required introduction to the methods of research and the arts of criticism that must be taken in the fall of junior year. During the sophomore sign-ins, students are placed into one of four seminars at Princeton<br><br>
 
-      The completed junior paper takes the form of one 20–30-page JP, which is begun in conjunction with the junior seminar and which students complete in the spring semester, continuing the advising established during the junior seminar for the student's independent work.
+      The completed junior paper takes the form of one 20-30-page JP, which is begun in conjunction with the junior seminar and which students complete in the spring semester, continuing the advising established during the junior seminar for the student's independent work.
     course_list:
       - ENG 300
   - name: Senior Thesis
