--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.9",
+    "@mui/system": "^6.1.9",
     "@tailwindcss/forms": "^0.5.9",
     "@types/react": "18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -68,7 +69,8 @@
     "sharp": "^0.33.5",
     "tailwindcss": "3.4.15",
     "typescript-eslint": "^8.16.0",
-    "webpack": "^5.96.1"
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "license": "MIT",
   "trustedDependencies": [
