--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "psycopg2>=2.9.10",
     "tqdm>=4.67.1",
     "orjson>=3.10.12",
+    "postgres>=4.0",
 ]
 
 # ===============================
