--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.3.1",
     "react-virtuoso": "^4.12.3",
     "react-window": "^1.8.10",
+    "sass": "^1.81.1",
     "tailwind-merge": "^2.5.5",
     "typescript": "5.7.2",
     "typescript-lru-cache": "^2.0.0",
