--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,8 @@ django-heroku==0.3.1
     # via hoagie-plan (pyproject.toml)
 djangorestframework==3.15.2
     # via hoagie-plan (pyproject.toml)
+gunicorn==23.0.0
+    # via hoagie-plan (pyproject.toml)
 orjson==3.10.12
     # via hoagie-plan (pyproject.toml)
 postgres==4.0
