--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,15 +30,17 @@
     "@mui/material": "^6.1.9",
     "@mui/system": "^6.1.9",
     "@next/bundle-analyzer": "^15.0.3",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/forms": "^0.5.9",
     "@types/react": "18.3.12",
     "@types/react-dom": "^18.3.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.14",
     "date-fns": "^4.1.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "evergreen-ui": "^7.1.9",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.464.0",
     "next": "14.2.16",
     "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
@@ -48,6 +50,7 @@
     "react-window": "^1.8.10",
     "sass": "^1.81.1",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.7.2",
     "typescript-lru-cache": "^2.0.0",
