--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false, // TODO: Let's be true TS champs and make this true eventually --windsor
-    "strictNullChecks": true,
+    "strictNullChecks": false, // TODO: Set to true and follow the above advice
     "noImplicitAny": false,
     "noEmit": true,
     "esModuleInterop": true,
@@ -18,13 +18,13 @@
     "jsx": "preserve",
     "incremental": true,
 
-    /* Strictness Flags */
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    /* TODO: Strictness Flags */
+    // "noUncheckedIndexedAccess": true,
+    // "noImplicitOverride": true,
+    // "noImplicitReturns": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
 
     "plugins": [
       {
